# auto-nav-f2025

./: README.md
Testing_gazebo_ros2_bridge/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Testing_gazebo_ros2_bridge/install/ros_gz_example_application/share/ros_gz_example_application/: local_setup.sh  package.sh
Testing_gazebo_ros2_bridge/install/ros_gz_example_bringup/share/ros_gz_example_bringup/: local_setup.sh  package.sh
Testing_gazebo_ros2_bridge/install/ros_gz_example_description/share/ros_gz_example_description/: package.sh
Testing_gazebo_ros2_bridge/install/ros_gz_example_gazebo/share/ros_gz_example_gazebo/: package.sh  package.xml
Testing_gazebo_ros2_bridge/log/: latest_build
Testing_gazebo_ros2_bridge/ros_gz_project_template/ros_gz_example_application/: CMakeLists.txt  package.xml
Testing_gazebo_ros2_bridge/ros_gz_project_template/ros_gz_example_application/src/: gnss_subscriber.cpp
Testing_gazebo_ros2_bridge/ros_gz_project_template/ros_gz_example_bringup/config/: ros_gz_example_bridge.yaml
aruco_detection/: .gitignore  INSTALL.md  LICENSE  README.md  SETUP.md  camera-calib.py  cv-aruco-visualization.py  record_video.py
aruco_detection/aruco_detection/: setup.py
aruco_detection/aruco_detection/aruco_detection/: aruco_generate_marker.py  aruco_node.py  webcam_publisher.py
aruco_detection/aruco_detection/config/: aruco_rviz.rviz
aruco_detection/aruco_detection/launch/: aruco_detection.launch.py
aruco_detection/aruco_detection_interfaces/: CMakeLists.txt
testing_nav2_template/: README_testing.md
(+5 files in other folders)
